# KSEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  KEngine.sln  KEngine.vcxproj  KEngine.vcxproj.filters  README.md  imgui.ini  main.cpp
Engine/: CMakeLists.txt  main.cpp
Engine/Application/: CMakeLists.txt
Engine/Application/private/: ApplicationModule.cpp  Window.cpp
Engine/Application/private/components/: ComponentTransform.cpp
Engine/Application/private/containers/: ByteBuffer.cpp  ByteBuffer.hpp
Engine/Application/private/ecs/: EntityComponentSystem.hpp
Engine/Application/private/fileio/: FileIO.cpp  FileIO.hpp  ResourceHandle.hpp  Serialization.hpp
Engine/Application/private/input/: InputCodes.hpp
Engine/Application/private/renderer/: ComputeRenderer.hpp  Renderer.hpp  ShaderInputs.hpp  StorageBuffer.hpp  SubRenderer.hpp  UniformBuffer.hpp
Engine/Application/private/renderer/DX12/: ModelRendererDX12.cpp  RendererDX12.cpp
Engine/Application/private/resources/: Image.cpp  Material.cpp  Mesh.hpp  Model.hpp
Engine/Application/public/: ApplicationModule.hpp  Device.hpp  Window.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/private/: MainEngine.cpp  engine.cpp  main_engine.cpp
Engine/Core/public/: MainEngine.hpp  ModuleInterface.hpp  TimeModule.hpp  engine.hpp  main_engine.hpp  module_interface.hpp
Engine/DXBackend/: CMakeLists.txt
Engine/DXBackend/private/: DXBackendModule.cpp  DXDevice.cpp
Engine/DXBackend/private/initialization/: DXFactory.cpp  DXFactory.hpp
Engine/DXBackend/public/: DXBackendModule.hpp  DXCommon.hpp  DXDevice.hpp
Engine/DirectX12Backend/: CMakeLists.txt
Engine/OldApplication/: CMakeLists.txt
Engine/OldApplication/private/: ApplicationModule.cpp  Device.cpp
Engine/OldApplication/private/DX12/: DXFactory.cpp  DXFactory.hpp
Engine/OldApplication/private/components/: ComponentTransform.hpp
Engine/OldApplication/private/fileio/: ResourceHandle.hpp
Engine/OldApplication/private/input/: RawInput.hpp
Engine/OldApplication/private/math/: Geometry.hpp
Engine/OldApplication/private/renderer/: RenderTarget.hpp  Shader.hpp  ShaderInputsBuilder.hpp  SubRenderer.hpp  UniformBuffer.hpp
Engine/OldApplication/private/renderer/DX12/: ComputeRendererDX12.cpp  ModelRendererDX12.cpp  ShaderInputsBuilderDX12.cpp  StorageBufferDX12.cpp  TextureDX12.cpp  UniformBufferDX12.cpp
Engine/OldApplication/private/resources/: Image.hpp
Engine/OldApplication/public/: ApplicationModule.hpp  Device.hpp
Engine/PCH/: CMakeLists.txt  pch.cpp  pch.hpp
Engine/Utility/: CMakeLists.txt
Engine/Utility/private/: new_override.cpp  timers.cpp
Engine/Utility/public/: Delegate.hpp  EnumUtils.hpp  common.hpp  log.hpp  timers.hpp
KSEngine/: KSEngine.sln
scripts/: build.bat  (+6 more)
(+367 files in other folders)
